# rodney_simulation

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bash_scripts/: move_head.sh
config/: rondey_sim_control.yaml
launch/: rodney_sim.launch
maps/: willowgarage_world.pgm  willowgarage_world.yaml  willowgarage_world_patrol.yaml
rviz/: urdf.rviz
src/: simulation_node.py
