<?xml version="1.0"?>
<package format="2">
  <name>rodney_simulation</name>
  <version>0.6.0</version>
  <description>The rodney_simulation package</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
